# deep_learning_project

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  compose.yaml  pyproject.toml
configs/: acceptance.yaml  compatibility.yaml
configs/data/: coco_subset.yaml  similarity_gallery.yaml  tiny_imagenet.yaml
configs/models/: efficientnet_b0.yaml  openclip_vit_b32.yaml  yolox_tiny.yaml
configs/runtime/: gpu_onnx.yaml  gpu_tensorrt.yaml  local_cpu.yaml
docs/: api-contract.md  architecture.md  model-data-licenses.md  phase-00-checklist.md
docs/adr/: 0001-serving-and-colab-boundary.md
models/: __init__.py
models/classification/: __init__.py
models/common/: __init__.py  reproducibility.py
models/detection/: __init__.py
models/similarity/: __init__.py
notebooks/: README.md
notebooks/colab/: 00_runtime_check.ipynb  01_data_prepare.ipynb  README.md
pipelines/: __init__.py  environment_report.py
pipelines/data/: __init__.py  coco.py  common.py  downloader.py  similarity.py  tiny_imagenet.py
requirements/: README.md  colab.txt  serving.txt
scripts/: __init__.py  download_datasets.py
services/: __init__.py
services/api/: __init__.py
services/worker/: __init__.py
src/: __init__.py
src/common/: __init__.py  logging.py
tests/: __init__.py
tests/unit/: README.md  __init__.py  test_environment_report.py  test_logging.py  test_project_configuration.py  test_reproducibility.py
