[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-engineer-challenge"
version = "0.1.0"
description = "Production-oriented computer vision and MLOps learning platform."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "structlog==26.1.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
data = [
    "pillow==12.3.0",
    "pycocotools==2.0.11",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "tqdm==4.69.0",
]
dev = [
    "mypy==2.3.0",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.22",
]
serving = [
    "celery==5.6.3",
    "fastapi==0.139.2",
    "numpy==2.4.6",
    "onnxruntime==1.27.0",
    "pillow==12.3.0",
    "psycopg[binary]==3.3.4",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "redis==8.0.1",
    "uvicorn[standard]==0.51.0",
]
model = [
    "numpy==2.4.6",
    "onnx==1.22.0",
    "onnxruntime==1.27.0",
    "open-clip-torch==3.3.0",
    "pillow==12.3.0",
    "pyyaml==6.0.3",
    "torch==2.13.0",
    "torchvision==0.28.0",
]
observability = [
    "prometheus-client==0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "pipelines*", "services*", "src*"]
exclude = ["artifacts*", "configs*", "docs*", "notebooks*", "requirements*", "tests*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "9.1"
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = ["tests"]
pythonpath = ["."]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = ["error"]
markers = [
    "gpu: requires a CUDA-capable GPU and the GPU dependency profile",
    "integration: requires one or more external services",
    "e2e: exercises a complete deployed request or job flow",
    "performance: executes a benchmark or load test",
]

[tool.coverage.run]
branch = true
source = ["models", "pipelines", "services", "src"]
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
precision = 2
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(?:abc\\.)?abstractmethod",
]

[tool.coverage.paths]
source = [
    "models",
    "pipelines",
    "services",
    "*/site-packages/models",
    "*/site-packages/pipelines",
    "*/site-packages/services",
    "*/site-packages/src",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["models", "pipelines", "services", "src", "tests"]
extend-exclude = [
    "artifacts",
    "data",
]

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["models", "pipelines", "services", "src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
files = ["models", "pipelines", "services", "src", "tests"]
exclude = [
    "artifacts/",
    "notebooks/",
]
mypy_path = "."
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
warn_unused_configs = true
cache_dir = ".mypy_cache"

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.uv]
package = true
